# hacs-puk-rumia

./: .gitignore  README.md  __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  parsing.py  pyproject.toml  pyrightconfig.json  sensor.py  strings.json
tests/: conftest.py  test_calendar.py  test_coordinator_virtual_bin.py  test_integration_minimal.py  test_parsing.py
